--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             text-align: center; /* Ensures the text is centered */
             font-size: 1.5rem;
         }
-        /* Removed .header-logo references since logos are removed */
 
         nav {
             display: flex;
@@ -133,20 +132,20 @@
 <body>
 
     <header>
-        <!-- Centered Titles -->
         <h1>Credit Research Centre</h1>
         <h2>Resource Repository</h2>
     </header>
 
+    <!-- Updated nav with CRC links -->
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Conference XIX</a>
-        <a href="#">Past Conferences</a>
-        <a href="#">Research</a>
-        <a href="#">Thought Leadership</a>
-        <a href="#">News</a>
-        <a href="#">MSc BIRA</a>
-        <a href="#">About</a>
+        <a href="https://www.crc.business-school.ed.ac.uk/home">Home</a>
+        <a href="https://www.crc.business-school.ed.ac.uk/conference-2025">Conference XIX</a>
+        <a href="https://www.crc.business-school.ed.ac.uk/conferences/past-papers">Past Conferences</a>
+        <a href="https://www.crc.business-school.ed.ac.uk/research">Research</a>
+        <a href="https://www.crc.business-school.ed.ac.uk/thought-leadership">Thought Leadership</a>
+        <a href="https://www.crc.business-school.ed.ac.uk/news">News</a>
+        <a href="https://www.crc.business-school.ed.ac.uk/msc-banking-risk">MSc BIRA</a>
+        <a href="https://www.crc.business-school.ed.ac.uk/about">About</a>
     </nav>
 
     <div class="container">
@@ -182,7 +181,6 @@
             <p>29 Buccleuch Place</p>
             <p>Edinburgh, EH8 9JS</p>
             <p>credit.research.centre@ed.ac.uk</p>
-            <!-- LinkedIn link added below the contact info -->
             <p><a href="https://www.linkedin.com/company/uebs-credit-research-centre/" target="_blank">
                 LinkedIn
             </a></p>
@@ -201,7 +199,6 @@
         &copy; 2024 Credit Research Centre, University of Edinburgh Business School
     </div>
 
-    <!-- Example script stub, update or remove as needed -->
     <script>
         function showResources() {
             // Your existing resource display logic
