--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         Concentration Risk, with illustrating data and code in R and Python. The IMF’s hybrid model of
                         portfolio credit risk has a structure that maintains good performance even in the presence of
                         high name-exposure concentrations, and therefore is an important model option and a mitigation
-                        of Centration Risk. This should be read by model developers and model risk managers as an
+                        of Concentration Risk. This should be read by model developers and model risk managers as an
                         example where model structure has mitigated a potential model error, so helping manage the
                         specification risk of the model.
                     </p>
