Correcting Link and Deleted few words

--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
                         the Concentration in the Rating Grades</a>
                     <p>This set of slides outlines the basic metrics for measuring Concentration among PD risk grades,
                         and the European regulatory requirements for reporting them. Andrija’s presentation gives
-                        helpful commentary and links to useful code – R and Python – to calculate these metrics. This
+                        helpful commentary to calculate these metrics. This
                         should be read and explored by all students of quantitative risk management and by model
                         managers, as an example of best practice and regulatory requirement for Credit Risk IRB.
                     </p>
 
-                    <a href="https://github.com/andrija-djurovic/adsfcr/tree/main/concentration_risk">IMF’s Partial
+                    <a href="https://github.com/andrija-djurovic/adsfcr/blob/main/concentration_risk/cr.pdf">IMF’s Partial
                         Portfolio</a>
                     <p>This folder contains Andrija’s presentation summary of the IMF’s Partial Portfolio Approach to
                         Concentration Risk, with illustrating data and code in R and Python. The IMF’s hybrid model of
