--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
                         managers, as an example of best practice and regulatory requirement for Credit Risk IRB.
                     </p>
 
-                    <a href="https://github.com/andrija-djurovic/adsfcr/blob/main/concentration_risk/cr.pdf">IMF’s Partial
+                    <a href="https://github.com/andrija-djurovic/adsfcr/blob/main/concentration_risk/cr.pdf">IMF’s
+                        Partial
                         Portfolio</a>
                     <p>This folder contains Andrija’s presentation summary of the IMF’s Partial Portfolio Approach to
                         Concentration Risk, with illustrating data and code in R and Python. The IMF’s hybrid model of
@@ -280,7 +281,6 @@
         <a href="https://www.business-school.ed.ac.uk/accessibility">Website Accessibility</a>
     </div>
     <script>
-
         function filterContent() {
             const selectedAuthor = document.getElementById("authorSelect").value;
             const selectedTopic = document.getElementById("topicSelect").value;
