Joe Breeden content addition

--- a/index.html
+++ b/index.html
@@ -247,6 +247,47 @@
                         classification using Softmax, and neural networks (including perceptrons).</p>
                 </div>
             </div>
+
+            <div class="topic-block resource" data-topic="age_period_cohort">
+                <h2>Topic: Age Period Cohort Modelling</h2>
+                <div class="author-block" data-author="joseph_breeden">
+
+                    <h3>Author: <a href="https://www.linkedin.com/in/josephlbreeden/">Joseph Breeden</a></h3>
+                    <a href="Pdfs/2009SpecificationErrors.pdf">Specification Errors in Stress Testing Models</a>
+                    <p>This paper highlights how stress testing models for retail lending often suffer from inherent
+                        specification errors when incorporating lifecycle, credit quality, and macroeconomic effects.
+                        Drawing parallels to Age-Period-Cohort (APC) models, the authors show that these interdependent
+                        factors create ambiguity in trend attribution, which limits model reliability, especially for
+                        out-of-sample stress testing.</p>
+
+
+                    <a href="Pdfs/glm-avt.pdf">Incorporating lifecycle and environment in
+                        loan-level forecasts and stress tests</a>
+                    <p>This paper introduces a loan-level Age-Vintage-Time (AVT) modeling approach to forecast credit
+                        risk by separating lifecycle effects, macroeconomic environment, and loan vintage quality. It
+                        extends Age-Period-Cohort (APC) models with retrending techniques and incorporates them into a
+                        Generalized Linear Model (GLM) framework. The work demonstrates, using a US auto loan dataset,
+                        that this method not only improves out-of-sample and out-of-time prediction accuracy but also
+                        provides stable and robust loan-level forecasts and stress tests, aligning with regulatory
+                        requirements like IFRS 9 and CECL.</p>
+
+
+                    <a href="Pdfs/SASAPCModeling20160314Preprint.pdf">Forecasting Behavior with Age-Period-Cohort
+                        Models: How APC Predicted the US Mortgage Crisis, but Also Does So Much More</a>
+                    <p>This paper introduces Age-Period-Cohort (APC) models and demonstrates their versatility beyond
+                        traditional use in epidemiology and demography. It shows how APC models not only explained the
+                        U.S. mortgage crisis by decomposing loan performance into lifecycle, vintage, and environmental
+                        effects, but also apply to diverse areas such as wine price forecasting, user behavior, and
+                        tree-ring analysis for climate change</p>
+
+
+                    <div class="comments-block">
+                        <h4>Comments by Alan Forest</h4>
+                        <a href="Pdfs/CommentaryonJoeBreeden.pdf" target="_blank">Read Comments
+                            (PDF)</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer-container">
