Alan Name correction

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     </p>
 
                     <div class="comments-block">
-                        <h4>Comments by Alan Forest</h4>
+                        <h4>Comments by Alan Forrest</h4>
                         <a href="Pdfs/CommentsConcentration.pdf" target="_blank">Read Comments
                             (PDF)</a>
                     </div>
@@ -347,7 +347,7 @@
 
 
                     <div class="comments-block">
-                        <h4>Comments by Alan Forest</h4>
+                        <h4>Comments by Alan Forrest</h4>
                         <a href="Pdfs/CommentaryonJoeBreeden.pdf" target="_blank">Read Comments
                             (PDF)</a>
                     </div>
